<resources>
    <string name="app_name">eMarket</string>
    <string name="activity_splash_iv_logo_description">Logo</string>
    <string name="menu_home_action_notification">Notification</string>
    <string name="menu_home_action_cart">Cart</string>
    <string name="cart_action_item_iv_description">Cart</string>
    <string name="notification_action_item_iv_description">Notification</string>
    <string name="see_all">See all</string>
    <string name="fragment_overview_categories_title">Categories</string>
    <string name="fragment_overview_products_popular">Popular Products</string>
    <string name="fragment_overview_products_new">New Products</string>
    <string name="fragment_overview_products_discount">Discount Products</string>
    <string name="fragment_overview_products_related">Related Products</string>
    <string name="login">Log in</string>
    <string name="menu_bottom_action_home">Home</string>
    <string name="menu_bottom_action_search">Search</string>
    <string name="menu_bottom_action_order">Order</string>
    <string name="menu_bottom_action_profile">Profile</string>
    <string name="activity_cart_top_bar_title">My Cart</string>
    <string name="activity_notification_top_bar_title">Notification</string>
    <string name="activity_product_detail_top_bar_title">Product Detail</string>
    <string name="activity_product_list_btn_filter_sorting"><![CDATA[Filter & Sorting]]></string>
    <string name="menu_top_product_detail_action_share">Share</string>
    <string name="menu_top_product_detail_action_cart">Cart</string>
    <string name="activity_product_detail_btn_add_to_cart">Add to cart</string>
    <string name="activity_product_detail_btn_add_to_favorite">Add to favourite</string>
    <string name="activity_product_detail_btn_load_more_reviews">Load More Reviews</string>
    <string name="activity_product_detail_description">Product Detail</string>
    <string name="dialog_filter_sort_title"><![CDATA[Filter & Sorting]]></string>
    <string name="dialog_all_categories_title">All Categories</string>
    <string name="dialog_filter_sort_tab_item_filter">Filter</string>
    <string name="dialog_filter_sort_tab_item_sorting">Sorting</string>
    <string name="fragment_filter_min_price">$0.00</string>
    <string name="fragment_filter_max_price">$100.00</string>
    <string name="dialog_filter_sort_btn_apply">Apply</string>
    <string name="dialog_filter_sort_btn_reset">Reset</string>
    <string name="fragment_filter_price_range">Price range</string>

    <string name="order_screen_title">Order</string>
    <string name="search_screen_title">Find products</string>
    <string name="menu_cart_action_clear">Clear</string>
    <string name="menu_cart_action_filter">Filter</string>
    <string name="activity_cart_btn_checkout">Checkout</string>
    <string name="activity_cart_tv_empty_cart_title">Your Cart is Empty</string>
    <string name="activity_cart_tv_empty_cart_description">Looks like you haven\'t added anything to your cart yet.</string>
    <string name="activity_cart_btn_go_back_shop">Back to Shop</string>
    <string name="fragment_profile_edit_profile">Edit Profile</string>
    <string name="fragment_profile_all_history">All History</string>
    <string name="fragment_profile_help">FAQ</string>
    <string name="fragment_profile_wallet">Wallet</string>
    <string name="fragment_profile_about">About Us</string>
    <string name="fragment_profile_log_out">Log out</string>
    <string name="fragment_profile_username">tansang752</string>
    <string name="fragment_profile_full_name">Bui Tan Sang</string>
    <string name="fragment_profile_arrow_button">arrow_button</string>
    <string name="fragment_profile_edit_button">edit_button</string>
    <string name="fragment_edit_profile_full_name">Full Name</string>
    <string name="fragment_edit_profile_gender">Gender</string>
    <string name="fragment_edit_profile_address">Address</string>
    <string name="fragment_edit_profile_phone">Phone</string>
    <string name="fragment_edit_profile_dob">DOB</string>
    <string name="fragment_about_title">About Us</string>
    <string name="fragment_all_history_title">All History</string>
    <string name="fragment_help_title">FAQ</string>
    <string name="fragment_wallet_title">Wallet</string>
    <string name="fragment_add_payment_title">Add Payment</string>
    <string name="searchbar_hint">Search store</string>
    <string name="fragment_order_title">Orders</string>
    <string name="fragment_order_empty">There is no order yet.</string>
    <string name="bottom_sheet_checkout_title">Checkout</string>
    <string name="fragment_about_duc">Thân Minh Đức</string>
    <string name="fragment_about_nam">Hoàng Quốc Nam</string>
    <string name="fragment_about_sang">Bùi Tấn Sang</string>
    <string name="fragment_about_tam">Lê Duy Tâm</string>
    <string name="fragment_add_payment_select_payment_method">Select Payment Method</string>
    <string name="checkout_confirm_order">Place Order</string>
    <string name="term_privacy">By placing an order you agree to our Terms And Conditions</string>
    <string name="check_out_total_cost_title">Total cost</string>
    <string name="checkout_promo_code_title">Promo code</string>
    <string name="checkout_payment_title">Payment</string>
    <string name="order_success_title">Your Order has been  accepted</string>
    <string name="order_success_description">Your items has been placed and is on  it’s way to being processed</string>
    <string name="track_order_title">Track Order</string>
    <string name="back_to_home_title">Back to home</string>
    <string name="activity_category_product_list_tv_no_products">No Results</string>
    <string name="activity_map_top_bar_title">Your location</string>
    <string name="bottom_sheet_location_title">Location</string>
    <string name="location_confirm_button">Confirm</string>
    <string name="activity_location_locate_button">Use this location</string>
    <string name="google_maps_key">AIzaSyBpbbzd_gEfynO4AatkbOuk4DjqGxIa4Vg</string>
    <string name="label_user_location">There\'s is no location yet</string>
    <string name="menu_map_refresh">Refresh</string>
    <string name="menu_home_action_favorite">Favorite</string>
    <string name="menu_bottom_action_favorite">Favorite</string>
    <string name="fragment_favorite_title">Favorites</string>
    <string name="fragment_favorite_empty">You\'ve not like any product</string>
    <string name="fragment_favorite_empty_btn">Let\'s go shopping !</string>
    <string name="order_user_information_title">User Information</string>
    <string name="order_products_information_title">Products</string>
    <string name="order_detail_information_title">Details</string>
    <string name="order_deliverymen_information_title">Deliveryman</string>
    <string name="activity_order_map_top_bar_title">Your Package on The Way</string>
</resources>