<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.OrderSuccessActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_lg"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

    <ImageView
        android:layout_width="270dp"
        android:layout_height="240dp"
        android:layout_marginTop="@dimen/margin_xl"
        android:src="@drawable/ic_order_success" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xl"
        android:text="@string/order_success_title"
        android:textSize="@dimen/text_size_xl"
        android:textAlignment="center"
        android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xl"
            android:text="@string/order_success_description"
            android:textSize="@dimen/text_size_md"
            android:layout_marginHorizontal="50dp"
            android:textColor="@color/gray_700"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_track_order"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_xxl"
            android:layout_marginStart="@dimen/margin_lg"
            android:layout_marginEnd="@dimen/margin_lg"
            android:text="@string/track_order_title"
            android:textSize="@dimen/text_size_md"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/btn_back_to_home"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/margin_lg"
            android:layout_marginEnd="@dimen/margin_lg"
            android:textColor="@color/black"
            android:text="@string/back_to_home_title"
            android:textSize="@dimen/text_size_md"
            app:cornerRadius="15dp" />


    </LinearLayout>


</LinearLayout>