<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.fragments.FilterFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fragment_filter_price_range"
        android:textSize="14sp"
        android:textStyle="bold" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rs_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="100"
        app:thumbColor="@color/white"
        app:thumbStrokeColor="@color/primary"
        app:thumbStrokeWidth="5dp"
        app:trackColorActive="@color/primary"
        android:layout_marginTop="-8dp"
        android:layout_marginBottom="-8dp"
        app:values="@array/initial_price_range_values" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_price_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/fragment_filter_min_price"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/fragment_filter_max_price"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>