<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_favorite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/transparent"
        android:elevation="0dp"
        app:elevation="1dp"
        app:title="@string/fragment_favorite_title"
        app:titleCentered="true"
        app:titleTextAppearance="@style/Toolbar.SmallTitleText"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/ll_favorite_products_loader_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/primary"
            android:indeterminateTintMode="src_atop" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_empty_favorite_products_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_empty_order"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_empty_favorite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/fragment_favorite_empty"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_empty_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fragment_favorite_empty_btn"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_favorite_products_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_lg"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite_products"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>