<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:background="@drawable/background_bottom_sheet"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/bottom_sheet_checkout_title"
            android:textFontWeight="700"
            android:textSize="@dimen/text_size_lg" />

        <Button
            android:id="@+id/btn_close_bottom_sheet"
            style="@style/Widget.Material3.Button.IconButton"
            app:iconSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawablePadding="@dimen/padding_sm"
            app:icon="@drawable/ic_close" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_2md" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/margin_xl">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/checkout_payment_title"
            android:textColor="@color/gray_700"
            android:textFontWeight="600"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_md" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_master_card" />

            <Button
                style="@style/Widget.Material3.Button.IconButton"
                android:id="@+id/btn_change_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:icon="@drawable/ic_arrow_right"
                app:iconTint="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_2md" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_xl">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/checkout_promo_code_title"
            android:gravity="center_vertical"
            android:textColor="@color/gray_700"
            android:textFontWeight="600"
            android:textSize="@dimen/text_size_md" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:id="@+id/et_promo_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_apply_promo_code"
            android:layout_width="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_height="match_parent"
            android:text="Apply"
            app:backgroundTint="@color/white"
            android:textColor="@color/PRIMARY"
            />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_2md" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/margin_xl">

        <TextView
            android:layout_width="362dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/check_out_total_cost_title"
            android:textColor="@color/gray_700"
            android:textFontWeight="600"
            android:textSize="@dimen/text_size_md" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_total_cost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textFontWeight="600"
                android:textSize="@dimen/text_size_md"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_2md" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingHorizontal="@dimen/margin_xl">

        <TextView
            android:id="@+id/tv_user_address"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_location"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_md"
            android:textStyle="bold"
            android:minHeight="60dp"
            android:drawablePadding="@dimen/padding_md"/>

        <Button
            style="@style/Widget.Material3.Button.IconButton"
            android:id="@+id/btn_change_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_arrow_right"
            app:iconTint="@color/black" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_2md" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xl"
        android:layout_marginTop="@dimen/margin_sm"
        android:lineSpacingExtra="5sp"
        android:text="@string/term_privacy"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_confirm_checkout"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="@dimen/margin_lg"
        android:layout_marginStart="@dimen/margin_lg"
        android:layout_marginEnd="@dimen/margin_lg"
        android:text="@string/checkout_confirm_order"
        android:textSize="@dimen/text_size_md"
        app:cornerRadius="15dp" />

</LinearLayout>